+auto refresh working #CSS changes in posts on profile page, search page, tabs3 +now all inputs have correct maxlength

--- a/Pipper-Front/src/app/cadastro/cadastro.page.html
+++ b/Pipper-Front/src/app/cadastro/cadastro.page.html
@@ -17,11 +17,11 @@
   <ion-list>
     <ion-item>
       <ion-label position="floating">Nome</ion-label>
-      <ion-input type="name" formControlName="name" maxlenght="30"></ion-input>
+      <ion-input type="name" formControlName="name" maxlength="25"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Nickname</ion-label>
-      <ion-input type="nickname" formControlName="nickname" maxlenght="10"></ion-input>
+      <ion-input type="nickname" formControlName="nickname" maxlength="10"></ion-input>
     </ion-item>
     <div class="linha"></div>
       <ion-item>
