--- a/Pipper-Front/src/app/components/profile-post/profile-post.component.html
+++ b/Pipper-Front/src/app/components/profile-post/profile-post.component.html
@@ -11,11 +11,12 @@
           <h2>{{post.title}}</h2>
         </div>
       </div>
+      <div class="hr"></div>
       <div class="profileButtons">
-        <ion-button size="small" class="button"><ion-icon name="thumbs-up-outline"></ion-icon><h6>{{post.like}}</h6></ion-button>
-        <ion-button size="small" class="button"><ion-icon name="chatbubble-outline"></ion-icon><h6>10</h6></ion-button>
-        <ion-button size="small" class="button"><ion-icon name="star" class="star"></ion-icon><h6>{{post.rating}}</h6></ion-button>
-        <ion-button size="small" class="button"><h6>Tags</h6></ion-button>
+        <ion-button mode="md" size="small" class="button"><ion-icon name="thumbs-up-outline"></ion-icon><h6>{{post.like}}</h6></ion-button>
+        <ion-button mode="md" size="small" class="button"><ion-icon name="chatbubble-outline"></ion-icon><h6>10</h6></ion-button>
+        <ion-button mode="md" size="small" class="button"><ion-icon name="star-outline" class="star"></ion-icon><h6>{{post.rating}}</h6></ion-button>
+        <ion-button mode="md" size="small" class="buttonTag"><h6>Tags</h6></ion-button>
       </div>
     </div>
   </ion-card-content>
