--- a/Pipper-Front/src/app/pages/post/post.page.html
+++ b/Pipper-Front/src/app/pages/post/post.page.html
@@ -31,7 +31,6 @@
 
         <div class="followAndTagPart"> <!--row-->
           <ion-button [ngClass]="{'following':followButton.chance}" size="small" class="buttonFollow" strong="true" mode="md" (click)="changeFollow()"><span style="text-transform:none!important;">{{followButton.follow}}</span></ion-button>
-          <ion-button size="small" class="buttonTag" strong="true" mode="md"><span style="text-transform:none!important;">Tags</span></ion-button>
         </div>
       </div>
       <!-- Display das informações do post -->
@@ -54,13 +53,13 @@
       <form [formGroup]="postForm" (ngSubmit)="editPost()">
       
       <div class="postTitle">
-        <ion-input position="floating" placeholder="Título" class="inputTitle" mode="md" type="title" formControlName="title"></ion-input>
+        <ion-input position="floating" placeholder="Título" class="inputTitle" mode="md" type="title" formControlName="title" maxlength="50"></ion-input>
       </div>
       <div class="leftRight">
         <div class="quoteLeft">
           <img src="../assets/quote.png">
         </div>
-        <ion-input position="floating" placeholder="Comentário" class="inputText" mode="md" type="text" formControlName="text"></ion-input>
+        <ion-input position="floating" placeholder="Comentário" class="inputText" mode="md" type="text" formControlName="text" maxlength="256"></ion-input>
         <div class="quoteRight">
          <img src="../assets/quote2.png">
         </div>
@@ -73,9 +72,14 @@
       <!-- Botões que desaparecem quando enquanto a edição do post nao estiver finalizada -->
       <div class="interactionButtons" *ngIf= "editModeOff">
         <div class="allButtons">
-          <ion-button class="interactionButton" size="small" mode="md" (click)="likePost()"><ion-icon name="thumbs-up-outline"></ion-icon>{{post.like}}</ion-button>
-          <ion-button class="interactionButton" size="small" mode="md" (click)="listComments()"><ion-icon name="chatbubble-outline"></ion-icon></ion-button>
-          <ion-button class="interactionButton" size="small" mode="md"><ion-icon name="star-outline"></ion-icon>{{post.rating}}</ion-button>
+          <div class="leftSideButtons">
+            <ion-button class="interactionButton" size="small" mode="md" (click)="likePost()"><ion-icon name="thumbs-up-outline"></ion-icon>{{post.like}}</ion-button>
+            <ion-button class="interactionButton" size="small" mode="md" (click)="listComments()"><ion-icon name="chatbubble-outline"></ion-icon></ion-button>
+            <ion-button class="interactionButton" size="small" mode="md"><ion-icon name="star-outline"></ion-icon>{{post.rating}}</ion-button>
+          </div>
+          <div class="postTag">
+            <ion-button size="small" class="buttonTag" strong="true" mode="md"><span style="text-transform:none!important;">Tags</span></ion-button>
+          </div>
         </div>
         <div class="trash">
           <ion-button class="interactionButton" size="small" mode="md" (click)="edit()" *ngIf="editButton"><ion-icon name="create-outline"></ion-icon><span style="text-transform:none!important;">Editar</span></ion-button>
