--- a/Pipper-Front/src/app/pages/search/search.page.scss
+++ b/Pipper-Front/src/app/pages/search/search.page.scss
@@ -1,6 +1,9 @@
 ion-content{
     --ion-background-color: #006A71;
 }
+ion-card {
+    border-radius: 10px;
+}
 ion-input{
     --ion-background-color: #EFFFFB;
     color: #EFFFFB;
