--- a/Pipper-Front/src/app/components/home-post/home-post.component.html
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="homePost">
       <div class="imgAndTags"> 
-          <div class="imgPost"><img src="https://lh3.googleusercontent.com/proxy/LfMY004l0hK9VXe0zHygZ6RLZM6OtoNPDmoh0CMkSslQ6SwjvCAAA71YGth69_Ci7zzQbfRL70nC9Sf7HRZb063ZawLPLpdvwTgzeSCNDRO9g0LFutj7vq-M6tbiAnB-78TAPQgp">
+          <div class="imgPost"><img src="https://farm8.staticflickr.com/7308/8733011111_12f3e70e5b_b.jpg">
         </div>
       </div>
 
@@ -37,12 +37,17 @@
     <div class="tagsPost">
       <ion-button mode="md" class="tags"><!--ngForaqui-->
         <span style="text-transform:none!important;">
-          Entretenimento
+          Produto
         </span>
       </ion-button>
       <ion-button mode="md" class="tags"><!--ngForaqui-->
         <span style="text-transform:none!important;">
-          Serviço
+          Físico
+        </span>
+      </ion-button>
+      <ion-button mode="md" class="tags"><!--ngForaqui-->
+        <span style="text-transform:none!important;">
+          Esporte
         </span>
       </ion-button>
       <ion-button mode="md" class="tags"><!--ngForaqui-->
@@ -50,18 +55,13 @@
           Saúde
         </span>
       </ion-button>
-      <ion-button mode="md" class="tags"><!--ngForaqui-->
-        <span style="text-transform:none!important;">
-          Infantil
-        </span>
-      </ion-button>
     </div>
 
     <div class="hr"></div>
     <div class="buttons"> <!--row-->
-      <ion-button size="small" class="button"><ion-icon name="thumbs-up-outline" ></ion-icon><h6>{{post.like}}</h6></ion-button>
-      <ion-button size="small" class="button"><ion-icon name="chatbubble-outline"></ion-icon><h6>43</h6></ion-button>
-      <ion-button size="small" class="button"><ion-icon name="star-outline" class="star"></ion-icon><h6>{{post.rating}}</h6></ion-button>
+      <ion-button mode="md" size="small" class="button"><ion-icon name="thumbs-up-outline" ></ion-icon><h6>{{post.like}}</h6></ion-button>
+      <ion-button mode="md" size="small" class="button"><ion-icon name="chatbubble-outline"></ion-icon><h6>43</h6></ion-button>
+      <ion-button mode="md" size="small" class="button"><ion-icon name="star-outline" class="star"></ion-icon><h6>{{post.rating}}</h6></ion-button>
     </div>
 
   </ion-card-content>
