--- a/Pipper-Front/src/app/components/home-post/home-post.component.scss
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.scss
@@ -1,5 +1,3 @@
-
-
 .homePost {
     display: flex;
     justify-content: space-around;
@@ -53,7 +51,6 @@
     background-color: #C4FB6D;
     height: 0.1px;
     margin-top: 3%;
-    margin-bottom: 2%;
 }
 .textUserAndButtons {
     width: 100%;
@@ -99,13 +96,14 @@ ion-button {
 }
 
 ion-card-content {
-    padding-bottom: 2%;
+    padding-bottom: 0%;
 }
 div.buttons ion-button.button {
     width: 100%;
     --border-radius: 0px;
     --background: #272727;
     color: #C4FB6D;
+    --box-shadow: none;
 }
 
 ion-icon {
@@ -115,6 +113,7 @@ ion-icon {
 .name {
     color: #FFE9E9;
     width: auto;
+    word-break: break-all;
 }
 
 .username {
@@ -134,7 +133,7 @@ ion-icon {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: 100%;
+    width: 90%;
     margin-left: 2%;
 }
 
