--- a/Pipper-Front/src/app/components/profile-post/profile-post.component.scss
+++ b/Pipper-Front/src/app/components/profile-post/profile-post.component.scss
@@ -1,3 +1,7 @@
+ion-card-content {
+    padding-bottom: 2%;
+}
+
 .profileContent {
     display: flex;
 }
@@ -6,12 +10,12 @@
     width: 30%;
     display: inline-block;
     height: auto;
-    border-radius: 10px;
+    border-radius: 10%;
     overflow: hidden;
 }
 
 .profileImg img {
-    height: auto;
+    height: 100%;
     object-fit: cover;
     width: 100%;
     background-size: cover;
@@ -25,10 +29,10 @@
 }
 
 .hr {
-    background-color: #50D890;
+    background-color: #C4FB6D;
     height: 0.1px;
-    margin-top: 10%;
-    margin-bottom: 10%;
+    margin-top: 5%;
+    margin-bottom: 2%;
 }
 
 .hr2 {
@@ -48,6 +52,10 @@ h2 {
     word-break: break-all;
 }
 
+ion-button {
+    margin-top: 0%;
+    margin-bottom: 0%;
+}
 .profileButtons {
     display: flex;
     justify-content: space-between;
@@ -55,18 +63,24 @@ h2 {
 
 .button {
     width: 100%;
-    --background: #C4FB6D;
-    color: black;
+    --background: #272727;
+    color: #C4FB6D;
+    --box-shadow: none;
 }
 
-.star {
-    color: darkorange;
-
+.buttonTag {
+    width: 100%;
+    --background: #C4FB6D;
+    color: black;
 }
 
 .postsCard {
     margin-top: 0%;
     border-radius: 10px;
+}
+
+ion-icon {
+    margin-right: 5%;
 }
 
 @media screen and (max-width: 350px) {
