--- a/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.html
+++ b/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.html
@@ -40,11 +40,11 @@
           <ion-list class="ionList">
             <ion-label>Nome</ion-label>
             <ion-item class="ionItem">
-              <ion-input type="name" placeholder="Fulano" formControlName="name"></ion-input>
+              <ion-input type="name" placeholder="Fulano" formControlName="name" maxlength="25"></ion-input>
             </ion-item>
             <ion-label>Nickname</ion-label>
             <ion-item class="ionItem">
-              <ion-input type="nickname" placeholder="@fulano" formControlName="nickname"></ion-input>
+              <ion-input type="nickname" placeholder="@fulano" formControlName="nickname" maxlength="10"></ion-input>
             </ion-item>
             <div class="hr"></div>
             <ion-label>E-mail</ion-label>
