#all profilePics are always round #homePostComponent imgs are all same size, changing into their own size at post page #minor CSS changes and adjustments for UI

--- a/Pipper-Front/src/app/components/comment/comment.component.html
+++ b/Pipper-Front/src/app/components/comment/comment.component.html
@@ -1,9 +1,10 @@
 <div class="imgAndText">
 
-  <div class="iconMask">
-    <img src="https://pbs.twimg.com/profile_images/1082020318523412480/E87sUSUc_400x400.jpg">
+  <div class="imgPlace">
+    <div class="iconMask">
+      <img src="https://pbs.twimg.com/profile_images/1082020318523412480/E87sUSUc_400x400.jpg">
+    </div>
   </div>
-
   <div class="commentText">
     <h3>{{comments.user.name}}</h3>
     <h6></h6>
