--- a/Pipper-Front/src/app/components/home-post/home-post.component.html
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.html
@@ -2,8 +2,10 @@
   <ion-card-content>
     <div class="userPhotoAndFollow"> <!--row-->
       <div class="photoAndUser">
-        <div class="mask">
-          <img src="https://pbs.twimg.com/profile_images/1082020318523412480/E87sUSUc_400x400.jpg">
+        <div class="imgPlace">
+          <div class="mask">
+            <img src="https://pbs.twimg.com/profile_images/1082020318523412480/E87sUSUc_400x400.jpg">
+          </div>
         </div>
         <div class="nameAndTime">
           <div class="nameAndUser">
@@ -21,8 +23,9 @@
     </div>
     <div class="homePost">
       <div class="imgAndTags"> 
-          <div class="imgPost"><img src="https://farm8.staticflickr.com/7308/8733011111_12f3e70e5b_b.jpg">
-        </div>
+          <div class="imgPost">
+            <img src="https://farm8.staticflickr.com/7308/8733011111_12f3e70e5b_b.jpg">
+          </div>
       </div>
 
       <div class="textUserAndButtons"> <!--collumn-->
