--- a/Pipper-Front/src/app/components/profile-post/profile-post.component.html
+++ b/Pipper-Front/src/app/components/profile-post/profile-post.component.html
@@ -2,8 +2,10 @@
   <ion-card-content>
     <div class="profilePost">
       <div class="profileContent">
-        <div class="profileImg">
-          <img src="https://emporioquatroestrelas.vteximg.com.br/arquivos/ids/159625-1000-1000/folha-de-louro-emp.png?v=637130581619630000">
+        <div class="imgPlace">
+          <div class="profileImg">
+            <img src="https://emporioquatroestrelas.vteximg.com.br/arquivos/ids/159625-1000-1000/folha-de-louro-emp.png?v=637130581619630000">
+          </div>
         </div>
         <div class="timeHrTitle">
           <h4>Hoje às 15h10</h4>
