--- a/Pipper-Front/src/app/components/user-component/user-component/user-component.component.html
+++ b/Pipper-Front/src/app/components/user-component/user-component/user-component.component.html
@@ -1,6 +1,8 @@
 <div class="userComponent">
-  <div class="userProfilePic">
-    <img src="https://i.pinimg.com/736x/27/9d/60/279d60166aa6d25c9bf4fa4cd2f9f9eb.jpg">
+  <div class="imgPlace">
+    <div class="userProfilePic">
+      <img src="https://i.pinimg.com/736x/27/9d/60/279d60166aa6d25c9bf4fa4cd2f9f9eb.jpg">
+    </div>
   </div>
     <div class="userInfo">
       <div class="name">
