--- a/Pipper-Front/src/app/tab3/tab3.page.html
+++ b/Pipper-Front/src/app/tab3/tab3.page.html
@@ -26,7 +26,11 @@
 
 <ion-card-content>
   <div class="usuario">
-    <div class="imagem"><img src="https://i.pinimg.com/736x/27/9d/60/279d60166aa6d25c9bf4fa4cd2f9f9eb.jpg" class="rosto"></div>
+    <div class="imgPlace">
+      <div class="imagem">
+        <img src="https://i.pinimg.com/736x/27/9d/60/279d60166aa6d25c9bf4fa4cd2f9f9eb.jpg" class="rosto">
+      </div>
+    </div>
     <div class="nome"><h4>Fulano <br> @fulano</h4></div>
     <div class="tag"><ion-button color="tertiary"><ion-icon name="chevron-back-outline"></ion-icon>tag</ion-button></div>
   </div>
