--- a/Pipper-Front/src/app/components/user-component/user-component/user-component.component.scss
+++ b/Pipper-Front/src/app/components/user-component/user-component/user-component.component.scss
@@ -1,17 +1,26 @@
 .userProfilePic {
-    width: 30%;
-    display: inline-block;
-    height: auto;
-    border-radius: 50px;
+    width: 12vw;
+    height: 12vw;
+    position: relative;
     overflow: hidden;
+    border-radius: 50%;
+    background-color: #272727;
+    object-fit: cover;
 }
 
 .userProfilePic img {
-    width: 100%;
-    border-radius: 50%;
-    height: auto;
-    object-fit: cover;
+    display: inline-block;
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
     background-size: cover;
+}
+
+.imgPlace {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 15%;
 }
 
 .userComponent {
