--- a/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.scss
+++ b/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.scss
@@ -69,6 +69,7 @@ ion-input{
     -webkit-text-stroke: 0.5px (black);
     
 }
+
 .botaoDois {
     -webkit-text-stroke: 1px black;
 }
@@ -94,7 +95,9 @@ ion-card {
     position: relative;
     overflow: hidden;
     border-radius: 50%;
-    background-color: #272727;
+    background-image: url("../../../assets/chamaBG.png");
+    background-repeat: repeat;
+    background-size: contain;
     object-fit: cover;
 }
 
@@ -127,6 +130,7 @@ h4 {
 
 ion-fab-button {
     --background: #272727;
+    margin-bottom: 5%;
 }
 
 ion-label {
