#more css changes

--- a/Pipper-Front/src/app/components/comment/comment.component.scss
+++ b/Pipper-Front/src/app/components/comment/comment.component.scss
@@ -4,8 +4,10 @@
     position: relative;
     overflow: hidden;
     border-radius: 50%;
-    background-color: #272727;
     object-fit: cover;
+    background-image: url("../../../assets/chamaBG.png");
+    background-repeat: repeat;
+    background-size: contain;
 }
 
 .iconMask img {
