--- a/Pipper-Front/src/app/components/home-post/home-post.component.html
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.html
@@ -4,7 +4,7 @@
       <div class="photoAndUser">
         <div class="imgPlace">
           <div class="mask">
-            <img src="https://pbs.twimg.com/profile_images/1082020318523412480/E87sUSUc_400x400.jpg">
+            <img src="">
           </div>
         </div>
         <div class="nameAndTime">
@@ -17,14 +17,14 @@
           </div>
         </div>
         </div>
-      <div class="follow">
+      <!--<div class="follow">
         <ion-button size="small" class="button" strong="true" mode="ios">{{followButton.follow}}</ion-button>
-      </div>
+      </div>-->
     </div>
     <div class="homePost">
       <div class="imgAndTags"> 
           <div class="imgPost">
-            <img src="https://farm8.staticflickr.com/7308/8733011111_12f3e70e5b_b.jpg">
+            <img src="https://sc02.alicdn.com/kf/UTB8621Wt5aMiuJk43PTq6ySmXXaO.jpg_350x350.jpg">
           </div>
       </div>
 
