--- a/Pipper-Front/src/app/components/tags/tags.component.html
+++ b/Pipper-Front/src/app/components/tags/tags.component.html
@@ -25,7 +25,7 @@
         <ion-button class="botao" color="tertiary" (click)="ativarTag(7)">Esporte</ion-button>
         <ion-button class="botao" color="tertiary" (click)="ativarTag(8)">Alimentação</ion-button>
         <ion-button class="botao" color="tertiary" (click)="ativarTag(9)">Utilidades Domésticas</ion-button>
-        <ion-button class="botao" color="tertiary" (click)="ativarTag(10)">Infantis</ion-button>
+        <ion-button class="botao" color="tertiary" (click)="ativarTag(10)">Infantil</ion-button>
       </div>
     </div>
   </ion-card-content>
