--- a/Pipper-Front/src/app/components/home-post/home-post.component.scss
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.scss
@@ -53,7 +53,7 @@
 .hr {
     background-color: #C4FB6D;
     height: 0.1px;
-    margin-top: 3%;
+    margin-top: 5%;
 }
 .textUserAndButtons {
     width: 60%;
@@ -75,7 +75,9 @@
     position: relative;
     overflow: hidden;
     border-radius: 50%;
-    background-color: #272727;
+    background-image: url("../../../assets/chamaBG.png");
+    background-repeat: repeat;
+    background-size: contain;
     object-fit: cover;
 }
 
@@ -118,7 +120,7 @@ ion-button {
 }
 
 ion-card-content {
-    padding-bottom: 0%;
+    padding-bottom: 1%;
 }
 div.buttons ion-button.button {
     width: 100%;
@@ -138,6 +140,7 @@ ion-icon {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    margin-top: 0px;
 }
 
 .username {
@@ -158,7 +161,7 @@ ion-icon {
     flex-direction: column;
     justify-content: flex-start;
     width: 95%;
-    margin-left: 5%;
+    margin-left: 2%;
 }
 
 h3 {
