--- a/Pipper-Front/src/app/pages/post/post.page.html
+++ b/Pipper-Front/src/app/pages/post/post.page.html
@@ -7,6 +7,11 @@
 </ion-header>
 
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullMin="10" pullMax="100" mode="md">
+    <ion-refresher-content
+    refreshingSpinner="crescent">
+    </ion-refresher-content>
+  </ion-refresher>
   <ion-card>
     <ion-card-header>
       <div class="cardPhoto">
