--- a/Pipper-Front/src/app/tab3/tab3.page.html
+++ b/Pipper-Front/src/app/tab3/tab3.page.html
@@ -32,21 +32,21 @@
       </div>
     </div>
     <div class="nome"><h4>Fulano <br> @fulano</h4></div>
-    <div class="tag"><ion-button color="tertiary"><ion-icon name="chevron-back-outline"></ion-icon>tag</ion-button></div>
+    <div class="tag"><ion-button color="tertiary" mode="md"><ion-icon name="chevron-back-outline"></ion-icon>tag</ion-button></div>
   </div>
   <form [formGroup]="postForm" (ngSubmit) = "submitForm(postForm)">
     <ion-list>
       <ion-item>
-        <ion-label position="floating">Título</ion-label>
+        <ion-label position="floating" class="label">Título</ion-label>
         <ion-input type="title" formControlName="title" maxLength="50"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="floating">Descrição</ion-label>
+        <ion-label position="floating" class="label">Descrição</ion-label>
         <ion-textarea auto-grow="true" type="text" formControlName="text" type="text" maxLength="256"></ion-textarea>
       </ion-item>
     </ion-list>
     <div class="button">
-      <ion-button class="botao" expand="block" size="Secondary" type="submit" shape="round" [disabled]="postForm.invalid" color ="success">Continuar</ion-button>
+      <ion-button class="botao" mode="md" expand="block" size="Secondary" type="submit" shape="round" [disabled]="postForm.invalid" color ="success">Continuar</ion-button>
     </div>
   </form>
 </ion-card-content>
