--- a/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.html
+++ b/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.html
@@ -15,7 +15,7 @@
   <ion-content>
   <ion-card>
     <ion-card-header>
-      <form  class="displayForm" [formGroup]="registerForm" (ngSubmit) = "submitForm(registerForm)">
+      <form  class="displayForm" [formGroup]="registerForm" (ngSubmit) = "editarPerfil()">
         <img
             class="foto-perfil"
             [src]="photo"
