--- a/Pipper-Front/src/app/cadastro-imagem/cadastro-imagem.page.html
+++ b/Pipper-Front/src/app/cadastro-imagem/cadastro-imagem.page.html
@@ -5,7 +5,7 @@
 
 
 <ion-header class="ion-no-border" mode="md">
-  <ion-icon class="header" name="chevron-back-circle-outline"size="large" (click)="sair()"></ion-icon>
+  <ion-icon class="header" name="chevron-back-circle-outline"size="large" (click)="voltar()"></ion-icon>
 </ion-header>
 
 <ion-content mode="md">
@@ -27,7 +27,7 @@
     </div>
     <div class="fim">
       <div class="pular" (click)="sair()">Pular</div>
-      <ion-button class="botao" expand="block" size="Secondary" type="submit" shape="round" color ="success">Continuar</ion-button>
+      <ion-button class="botao" expand="block" size="Secondary" type="submit" shape="round" color ="success" (click)="cadastro()">Continuar</ion-button>
     </div>
   </div>
 </ion-content>
