--- a/Pipper-Front/src/app/components/profile-post/profile-post.component.html
+++ b/Pipper-Front/src/app/components/profile-post/profile-post.component.html
@@ -1,9 +1,9 @@
-<ion-card class="postsCard">
+<ion-card class="postsCard" >
   <ion-card-content>
     <div class="profilePost">
       <div class="profileContent">
         <div class="profileImg">
-          <img src="https://emporioquatroestrelas.vteximg.com.br/arquivos/ids/159625-1000-1000/folha-de-louro-emp.png?v=637130581619630000">
+          <img [src]="post.photo">
         </div>
         <div class="timeHrTitle">
           <h4>Hoje às 15h10</h4>
