--- a/Pipper-Front/src/app/pages/profile/profile.page.html
+++ b/Pipper-Front/src/app/pages/profile/profile.page.html
@@ -10,12 +10,12 @@
 <ion-content>
 
   <ion-card class="profile">
-    <ion-card-content>
+    <ion-card-content *ngIf="user">
       <div class="profileContent">
         <div class="profileMask">
-          <img src="https://pbs.twimg.com/profile_images/1082020318523412480/E87sUSUc_400x400.jpg">
+          <img [src]="user.photo">
         </div>
-        <div class="userInfo" *ngIf="user">
+        <div class="userInfo" >
           <h2>{{user.name}}<ion-icon name="leaf-outline" class="leaf"></ion-icon></h2>
           <div class="userNumbers">
             <div class="userPosts">
@@ -23,11 +23,11 @@
               <div class="numberText"><h6>Publicações</h6></div>
             </div>
             <div class="userFollowers">
-              <div class="number"><h3>8</h3></div>
+              <div class="number"><h3>{{user.followers}}</h3></div>
               <div class="numberText"><h6>Seguidores</h6></div>
             </div>
             <div class="userFollowing">
-              <div class="number"><h3>102</h3></div>
+              <div class="number"><h3>{{user.followed}}</h3></div>
               <div class="numberText"><h6>Seguindo</h6></div>
             </div>
           </div>
