#now all photos are truly round

--- a/Pipper-Front/src/app/components/home-post/home-post.component.html
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.html
@@ -22,10 +22,10 @@
       </div>-->
     </div>
     <div class="homePost">
-      <div class="imgAndTags"> <!--collumn-->
+      <div class="imgAndTags" *ngIf="post.photo"> <!--collumn-->
           <div class="imgPost">
             <img [src]='post.photo'>
-        </div>
+          </div>
       </div>
 
       <div class="textUserAndButtons"> <!--collumn-->
