--- a/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.scss
+++ b/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.scss
@@ -105,8 +105,9 @@ ion-card {
     display: inline-block;
     margin: 0 auto;
     height: 100%;
-    width: auto;
-    background-size: cover;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
 
 }
 
