--- a/Pipper-Front/src/app/pages/profile/profile.page.html
+++ b/Pipper-Front/src/app/pages/profile/profile.page.html
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="userInfo" >
-          <h2>{{user.name}}<ion-icon name="leaf-outline" class="leaf"></ion-icon></h2>
+          <h2>{{user.name}}</h2>
           <div class="userNumbers">
             <div class="userPosts">
               <div class="number"><h3>{{postCount}}</h3></div>
