--- a/Pipper-Front/src/app/user-popover/user-popover.component.html
+++ b/Pipper-Front/src/app/user-popover/user-popover.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="userInfo">
         <div class="userNames">
-          <h2>{{userInfo.nickname}}</h2><ion-icon name="leaf-outline" class="leaf"></ion-icon>
+          <h2 class="username">{{userInfo.nickname}}</h2><ion-icon name="leaf-outline" class="leaf"></ion-icon>
         </div>
 
         <div class="userNumbers">
