--- a/Pipper-Front/src/global.scss
+++ b/Pipper-Front/src/global.scss
@@ -26,7 +26,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 .popovercss .popover-content{
-    --width: 85%;
+    --max-width: 100%;
     --backdrop-opacity: 0.1;
     border-radius: 10px;
     background: #272727;
