--- a/Pipper-Front/src/app/components/comment/comment.component.scss
+++ b/Pipper-Front/src/app/components/comment/comment.component.scss
@@ -14,8 +14,9 @@
     display: inline-block;
     margin: 0 auto;
     height: 100%;
-    width: auto;
-    background-size: cover;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 .imgPlace {
