--- a/Pipper-Front/src/app/tab3/tab3.page.scss
+++ b/Pipper-Front/src/app/tab3/tab3.page.scss
@@ -43,8 +43,9 @@ ion-card{
     display: inline-block;
     margin: 0 auto;
     height: 100%;
-    width: auto;
-    background-size: cover;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 .imgPlace {
@@ -103,4 +104,37 @@ img.foto-perfil{
 
 .label {
     color: #50D890;
+}
+
+.ratingCard {
+    box-shadow: none;
+}
+
+.ratings {
+    display: flex;
+
+}
+
+.starButton {
+    --background: #272727;
+    --box-shadow: none;
+}
+
+.star {
+    color: #50D890;
+}
+
+.ratingText {
+    display: flex;
+    width: 100%;
+    margin-left: 5%;
+}
+
+
+.rating {
+    width: auto;
+}
+
+.click {
+    color: #C4FB6D;
 }
