--- a/Pipper-Front/src/app/user-popover/user-popover.component.scss
+++ b/Pipper-Front/src/app/user-popover/user-popover.component.scss
@@ -3,29 +3,32 @@
     font-family: 'Poiret One';
     --color: #50D890;
 }
-
+ion-content {
+    --width: 100%;
+}
 .profileContent {
     display: flex;
     flex-direction: column;
 }
 
 .profileMask {
-    width: 30%;
-    height: 30%;
+    width: 20vw;
+    height: 20vw;
     position: relative;
     overflow: hidden;
-    border-radius: 50%;
+    border-radius: 100%;
     background-color: #272727;
     object-fit: cover;
 
 }
 
 .profileMask img {
+    display: inline-block;
+    margin: 0 auto;
+    height: 100%;
     width: 100%;
-    border-radius: 50%;
-    height: auto;
     object-fit: cover;
-    background-size: cover;
+    object-position: center;
 }
 
 .imgPlace {
@@ -51,7 +54,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    margin-top: 2%;
+    margin-top: 5%;
     margin-bottom: 2%;
     justify-content: center;
 }
@@ -97,6 +100,7 @@
 }
 
 .conteudo {
+    width: 100%;
     margin-left: 2%;
     margin-top: 5%;
 }
@@ -117,7 +121,7 @@ h5 {
 }
 
 h6 {
-    font-size: 80%;
+    font-size: 70%;
     margin-top: 2%;
     margin-bottom: 5%;
     color: silver;
