*bus de request/+Quantidade de Comentarios nas paginas

--- a/Pipper-Front/src/app/components/home-post/home-post.component.scss
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.scss
@@ -1,7 +1,7 @@
 .homePost {
     display: flex;
     width: 100%;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .imgAndTags {
