--- a/Pipper-Front/src/app/pages/post/post.page.html
+++ b/Pipper-Front/src/app/pages/post/post.page.html
@@ -14,8 +14,6 @@
   </ion-refresher>
   <ion-card *ngIf="user">
     <ion-card-header *ngIf="editModeOff">
-  <ion-card>
-    <ion-card-header>
       <div class="cardPhoto">
         <img [src]="photoPost">
       </div>
@@ -95,7 +93,7 @@
         <div class="allButtons">
           <div class="leftSideButtons">
             <ion-button class="interactionButton" size="small" mode="md" (click)="likePost()"><ion-icon name="thumbs-up-outline"></ion-icon>{{post.like}}</ion-button>
-            <ion-button class="interactionButton" size="small" mode="md" (click)="listComments()"><ion-icon name="chatbubble-outline"></ion-icon></ion-button>
+            <ion-button class="interactionButton" size="small" mode="md" (click)="listComments()"><ion-icon name="chatbubble-outline"></ion-icon>{{post.count_comments}}</ion-button>
             <ion-button class="interactionButton" size="small" mode="md"><ion-icon name="star-outline"></ion-icon>{{post.rating}}</ion-button>
           </div>
           <div class="postTag">
@@ -133,7 +131,5 @@
       </ion-card-content>
     </ion-card>
   </div>
-
-</ion-content>
 
 <!--*ngIf="showComment" in commentPart--> 
